# Intelligent-Robotics

./: README.md
assignment1/: CMakeLists.txt  README.md  package.xml
assignment1/action/: WaypointMove.action
assignment1/launch/: after_gazebo.launch  independent_services.launch  last_nodes.launch  launch_independent_services.launch  launch_last_nodes.launch
assignment1/src/: apriltag_detect_service.cpp  apriltag_locator.cpp  coordinator.cpp  first_move_test  first_move_test.cpp  look_down.cpp  map_divider.cpp  map_listener.cpp  map_service.cpp  map_waypoints_service.cpp  movement_handler.cpp  movement_handler_test.cpp  node_A.cpp  node_B.cpp  waypoints_finder.cpp
assignment1/srv/: apriltag_detect.srv  map_service.srv  map_waypoints.srv
assignment2/: CMakeLists.txt  README.md  package.xml
assignment2/action/: ApriltagSearch.action  ObjectMove.action
assignment2/include/: movement.h
assignment2/launch/: after_gazebo.launch  independent_services.launch  last_nodes.launch  launch_after_gazebo.launch  launch_independent_services.launch  launch_last_nodes.launch  main.launch  rviz.launch
assignment2/rviz/: config.rviz
assignment2/src/: apriltag_detect_service.cpp  apriltag_locator.cpp  map_waypoints_service.cpp  movement.cpp  movement_handler.cpp  node_A.cpp  node_A_old.cpp  node_B.cpp  node_B_1.cpp  node_C.cpp  node_C_tester.cpp  test_moveit_collision.cpp
assignment2/srv/: apriltag_detect.srv  object_detect.srv
