<?xml version="1.0"?>
<package format="2">
  <name>assignment2</name>
  <version>0.0.0</version>
  <description>The assignment2 package</description>
  <maintainer email="group02@todo.todo">cwinge</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>shape_msgs</build_depend>
  <exec_depend>message_generation</exec_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <build_depend>actionlib_msgs</build_depend>
  <depend>control_msgs</depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <depend>image_geometry</depend>

  <export>
  </export>
</package>
